--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,4 +1,4 @@
-BOT_TOKEN = NjEzNjQ4Mjk5OTY2MzMyOTM4.XVz_AQ.hjTyxNaHp9j3jM7ubgQis_CRhxc
+BOT_TOKEN = NjEzNjQ4Mjk5OTY2MzMyOTM4.XV0Zbw._BrJVC4g_4Sy4JrRkYNf3D_sBqo
 
 timezone = 9
 
